[gd_scene load_steps=13 format=2]

[ext_resource path="res://Pancernik.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/grass.png" type="Texture" id=2]
[ext_resource path="res://Assets/background.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Cloud.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cactus.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=8]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 960, 0, 0, 0, 0, 0, 960, 704 )
}

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1048, 888, 0, 0, 0, 0, 1560, 888, 0, 0, 0, 0, 1560, 888 )
}

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 3
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )
Cloud_scene = ExtResource( 5 )
Cactus_scene = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1228.76, 98.0539 )
scale = Vector2( 2.17886, 1.34099 )
texture = ExtResource( 3 )
offset = Vector2( 734.328, 262.493 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 360, 1090.71 )
scale = Vector2( 2.23603, 3.2636 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 694.928, 1089.26 )
scale = Vector2( 5.86691, 3.20323 )
polygon = PoolVector2Array( 161, 58, -161, 58, -161.998, -60.3327, 161, -58 )

[node name="CloudTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CloudPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="CloudSpawnLocation" type="PathFollow2D" parent="CloudPath"]
position = Vector2( 960, 0 )
rotation = 1.5708

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
light_mask = 9
position = Vector2( -32, 8 )
scale = Vector2( 40, 90 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CactusPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="CactusSpawnLocation" type="PathFollow2D" parent="CactusPath"]
position = Vector2( 1048, 888 )

[node name="Pancernik" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 832 )
collision_layer = 7

[node name="KoniecGryInfo" type="Label" parent="."]
visible = false
margin_left = 64.0
margin_top = 704.0
margin_right = 671.0
margin_bottom = 787.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Koniec gry!
Kliknij by wyjść do menu głównego"
align = 1
valign = 1

[connection signal="timeout" from="CloudTimer" to="." method="_on_CloudTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="TouchScreenButton" to="Pancernik" method="_on_TouchScreenButton_pressed"]
[connection signal="hit" from="Pancernik" to="." method="_on_Pancernik_hit"]
